--- a/src/index.njk
+++ b/src/index.njk
@@ -1,11 +1,11 @@
 ---
-title: I deployed to Netlify!
+title: Ondrej Fabry
 layout: layouts/base.njk
 ---
 
 
-<h2 id="get-yours">Get your own</h2>
-
+<h2 id="get-yours">Ondrej Fabry</h2>
+<!--
 <p>
   Oh hi! Admiring this site that {% if details.name %}{{ details.name }}{% else %}I{% endif %} deployed? Well, you can get one too.
 </p>
@@ -29,3 +29,4 @@ layout: layouts/base.njk
   <li><a href="/next-steps/#redirects">Define redirect rules</a></li>
   <li><a href="/next-steps/#functions">Deploy a serverless function</a></li>
 </ol>
+-->
