--- a/src/index.njk
+++ b/src/index.njk
@@ -4,29 +4,15 @@ layout: layouts/base.njk
 ---
 
 
-<h2 id="get-yours">Ondrej Fabry</h2>
-<!--
 <p>
-  Oh hi! Admiring this site that {% if details.name %}{{ details.name }}{% else %}I{% endif %} deployed? Well, you can get one too.
+  Enthusiastic software engineer developing primarily in Go language for more than five years. 
+  Highly skilled in linux environment, systems and networking with a lot of experience working 
+  with containers and cloud-native application development.
 </p>
 <p>
-  To deploy your own copy of this site, and enter the prize draw at {{ details.event }}, just click the button below, follow the instructions, and then tweet the link.
-</p>
-<p>
-  <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify/my-first-netlify-deploys">
-    <img src="https://www.netlify.com/img/deploy/button.svg" alt="Deploy to Netlify">
-  </a>
-</p>
-<h2>Deploy and then what?</h2>
-<p>
-  Try out a few more of the things that you can do with this once you've deployed to Netlify.
+  Constantly embracing my endless curiosity for exploring world of open source to learn about 
+  innovative concepts. Always eager to brainstorm new ideas and think about means of turning 
+  them into prototypes. Continually analyzing software development processes while looking for 
+  ways to improve efficiency or automate repetitive tasks.
 </p>
 
-<ol>
-  <li><a href="/next-steps/#add-your-name">Add your name</a></li>
-  <li><a href="/next-steps/#deploy-preview">Create a deploy preview</a></li>
-  <li><a href="/next-steps/#form">Add a form</a></li>
-  <li><a href="/next-steps/#redirects">Define redirect rules</a></li>
-  <li><a href="/next-steps/#functions">Deploy a serverless function</a></li>
-</ol>
--->
