--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="container">
-        <a href="/" class="home" title="Home"><img src="https://gravatar.com/avatar/33c0b767fd936a9437e09cf6fc801cca" alt="Gravatar"></a>
+        <a href="/" class="home" title="Home"><img src="https://gravatar.com/avatar/33c0b767fd936a9437e09cf6fc801cca?size=200" alt="Gravatar"></a>
         {% block header %}
           {# Replace this if anything is passed in to the header block #}
           {% if header %}
@@ -23,7 +23,7 @@
           </p>
           {% else %}
           <h1>Ondrej Fabry</h1>
-          <code style="color:#bbb;margin-top:10px;">
+          <code style="color:#bbb;margin-top:10px;font-size:14px;">
             enthusiastic software engineer from Slovakia
           </code>
           <p>
