--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="container">
-        <a href="/" class="home" title="Home"><img src="https://gravatar.com/avatar/33c0b767fd936a9437e09cf6fc801cca?size=200" alt="Gravatar"></a>
+        <a href="/" class="home" title="Home"><img src="https://en.gravatar.com/userimage/129858368/b19c73aa876bf220dcc4b8a03b95f67b.png?size=200" alt="Gravatar"></a>
         {% block header %}
           {# Replace this if anything is passed in to the header block #}
           {% if header %}
