--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -25,7 +25,9 @@
             {{ header.subtitle }}
           </p>
           {% else %}
+          <code style="color:#bbb;margin-top:10px;font-size:14px;">
           Personal webiste for software engineer from Slovakia.
+          </code>
           {% endif %}
         {% endblock %}
       </div>
