--- a/src/index.njk
+++ b/src/index.njk
@@ -1,18 +1,6 @@
 ---
-title: Ondrej Fabry
+title: fabry.dev
 layout: layouts/base.njk
 ---
 
-
-<p>
-  Enthusiastic software engineer developing primarily in Go language for more than five years. 
-  Highly skilled in linux environment, systems and networking with a lot of experience working 
-  with containers and cloud-native application development.
-</p>
-<p>
-  Constantly embracing my endless curiosity for exploring world of open source to learn about 
-  innovative concepts. Always eager to brainstorm new ideas and think about means of turning 
-  them into prototypes. Continually analyzing software development processes while looking for 
-  ways to improve efficiency or automate repetitive tasks.
-</p>
-
+<a href="/about">About</a>
