--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -15,7 +15,7 @@
       <div class="container">
         <a href="/" class="home" title="Home">
         <img src="https://en.gravatar.com/userimage/129858368/1905f05f52abf7934f90bc3e8dab66d5.png?size=150" alt="Gravatar">
-        <p style="color:black;">fabry.dev</p>
+        <h3 style="color:black;">fabry.dev</h3>
         </a>
         {% block header %}
           {# Replace this if anything is passed in to the header block #}
