--- a/src/_includes/styles.css
+++ b/src/_includes/styles.css
@@ -11,7 +11,8 @@ body {
   font-size: 16px;
   height: 100vh;
   font-family: Arial, Helvetica, sans-serif;
-  color:#666;
+  color:#8b949e;
+  background-color: #0d1116;
 }
 
 h1, h2, h3 {
