--- a/src/about.njk
+++ b/src/about.njk
@@ -8,6 +8,7 @@ layout: layouts/base.njk
 <p>
   <a href="https://linkedin.com/in/ofabry" class="btn btn-white"><i class="fab fa-linkedin"></i> LinkedIn</a> 
   <a href="https://github.com/ofabry" class="btn btn-white"><i class="fab fa-github-square"></i> GitHub</a>
+  <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="ofabry" data-color="#FFDD00" data-emoji="🍺" data-font="Lato" data-text="Buy me a beer" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
 </p>
 
 <h3> Bio </h3>
