--- a/src/about.njk
+++ b/src/about.njk
@@ -4,12 +4,17 @@ layout: layouts/base.njk
 ---
 
 <h1>Ondrej Fabry</h1>
+
+<!-- LinkedIn -->
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+<div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="ofabry"><a class="LI-simple-link" href='https://sk.linkedin.com/in/ofabry?trk=profile-badge'>Ondrej Fabry</a></div>
  
 <p>
   <a href="https://linkedin.com/in/ofabry" class="btn btn-white"><i class="fab fa-linkedin"></i> LinkedIn</a> 
   <a href="https://github.com/ofabry" class="btn btn-white"><i class="fab fa-github-square"></i> GitHub</a>
 </p>
 
+<!-- BuyMeACoffee -->
 <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="ofabry" data-color="#ffffe5" data-emoji="🍺"  data-font="Lato" data-text="Buy Ondrej a beer" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#FFDD00" ></script>
 
 <h3> Bio </h3>
