--- a/src/about.njk
+++ b/src/about.njk
@@ -6,7 +6,7 @@ layout: layouts/base.njk
 <h1>Ondrej Fabry</h1>
 
 <!-- LinkedIn -->
-<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js"></script>
 <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="ofabry"><a class="LI-simple-link" href='https://sk.linkedin.com/in/ofabry?trk=profile-badge'>Ondrej Fabry</a></div>
  
 <p>
