--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -14,8 +14,8 @@
     <header>
       <div class="container">
         <a href="/" class="home" title="Home">
-        <img src="https://en.gravatar.com/userimage/129858368/1905f05f52abf7934f90bc3e8dab66d5.png?size=150" alt="Gravatar">
-        <h3 style="color:black;">fabry.dev</h3>
+        <img src="https://en.gravatar.com/userimage/129858368/1905f05f52abf7934f90bc3e8dab66d5.png?size=50" alt="Gravatar">
+        <p style="color:black;">fabry.dev</p>
         </a>
         {% block header %}
           {# Replace this if anything is passed in to the header block #}
@@ -25,9 +25,6 @@
             {{ header.subtitle }}
           </p>
           {% else %}
-          <code style="color:#bbb;margin-top:10px;font-size:14px;">
-          Personal webiste for software engineer from Slovakia.
-          </code>
           {% endif %}
         {% endblock %}
       </div>
