--- a/src/about.njk
+++ b/src/about.njk
@@ -17,16 +17,8 @@ layout: layouts/base.njk
 <!-- BuyMeACoffee -->
 <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="ofabry" data-color="#ffffe5" data-emoji="🍺"  data-font="Lato" data-text="Buy Ondrej a beer" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#FFDD00" ></script>
 
-<h3> Bio </h3>
+<h3> About Me </h3>
 <p>
-  Enthusiastic software engineer developing primarily in Go language for more than five years. 
-  Highly skilled in linux environment, systems and networking with a lot of experience working 
-  with containers and cloud-native application development.
-</p>
-<p>
-  Constantly embracing my endless curiosity for exploring world of open source to learn about 
-  innovative concepts. Always eager to brainstorm new ideas and think about means of turning 
-  them into prototypes. Continually analyzing software development processes while looking for 
-  ways to improve efficiency or automate repetitive tasks.
+  Hi there, I am Ondrej Fabry, a software engineer with over 12 years of experience in the industry. I am passionate about developing innovative and efficient software solutions that solve real-world problems. With a strong background in Linux and Go, I have developed expertise in cloud-native applications and network systems. I am always eager to learn about new technologies and love to collaborate with others on exciting projects. I believe in the power of open-source development and strive to make a positive impact through my work. Thank you for taking the time to visit my site!
 </p>
 
